# Coeus_artifact

./: .gitignore  README.md  env_setup.sh
aws_scripts/: .gitignore  README.md  kill_all.py  shut_down.py
aws_scripts/figure_5/: .gitignore  gen_graph.py  latency-vs-machines.sh  run_experiments.py
aws_scripts/figure_6_7/: aws_utils.py  gen_graph.py  latency-vs-rounds.sh  run_experiments.py
aws_scripts/figure_9/: gen_graph.py  multi-machine-matrix-vector.sh  run_experiments.py
baseline/: .gitignore
baseline/client/: .gitignore  CMakeLists.txt  client.cpp  run_client.py  run_client_latency.py
baseline/common/: .gitignore
baseline/server/master/: CMakeLists.txt  run_master.py  run_master_latency.py
baseline/server/worker/: CMakeLists.txt  run_worker.py  run_worker_latency.py  worker.cpp
graphs/latency-vs-machines/: .gitignore  gen_graph.py  latency-vs-machines.sh
graphs/latency-vs-rounds/: .gitignore  gen_graph.py
graphs/multi-machine-matrix-vector/: .gitignore  gen_graph.py
matmult/: .gitignore  CMakeLists.txt  baseline.cpp  gen_graph.py  opt1.cpp  opt2.cpp  run.sh  single-machine-matrix-vector.sh
step1/: .gitignore
step1/client/: CMakeLists.txt  merge.cpp  run_client.py  run_client_latency.py  run_client_matmult.py  split.cpp
step1/common/: globals.h
step1/server/master/: CMakeLists.txt  merge.cpp  run_master.py  run_master_latency.py  run_master_matmult.py  split.cpp
step1/server/worker/: CMakeLists.txt  merge.cpp  run_worker.py  run_worker_latency.py  run_worker_matmult.py  split.cpp
step2/client/: CMakeLists.txt  client.cpp  pir_client.cpp  run_client_latency.py
step2/common/: cuckoo.cpp  cuckoo.hpp  globals.h  pir_server.hpp  worker_ip.txt
step2/master/: .gitignore  master.cpp  run_master_latency.py
step2/worker/: CMakeLists.txt  pir.cpp  pir_server.cpp  run_worker_latency.py  worker.cpp
step3/client/: CMakeLists.txt  client.cpp  run_client_latency.py
step3/common/: globals.h
step3/master/: CMakeLists.txt  master.cpp  run_master_latency.py
step3/worker/: .gitignore  CMakeLists.txt  run_worker_latency.py  worker.cpp
